RESOLVED FIXED233163
[LFC][IFC] Fix fast/text/text-indent-inside-float.html
https://bugs.webkit.org/show_bug.cgi?id=233163
Summary [LFC][IFC] Fix fast/text/text-indent-inside-float.html
alan
Reported 2021-11-15 19:22:10 PST
ssia
Attachments
Patch (5.10 KB, patch)
2021-11-15 19:39 PST, alan
no flags
Patch (5.19 KB, patch)
2021-11-16 06:35 PST, alan
no flags
alan
Comment 1 2021-11-15 19:39:22 PST
alan
Comment 2 2021-11-16 06:35:53 PST
EWS
Comment 3 2021-11-16 07:07:58 PST
Committed r285860 (244286@main): <https://commits.webkit.org/244286@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444372 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-16 07:08:22 PST
Note You need to log in before you can comment on or make changes to this bug.