[LFC][IFC] Fix fast/text/text-indent-inside-float.html https://bugs.webkit.org/show_bug.cgi?id=233163

Reviewed by Antti Koivisto.

Percentages must be treated as 0 for the purpose of calculating intrinsic size contributions.
https://drafts.csswg.org/css-text/#text-indent-property

Note that this patch is in preparation for enabling IFC preferred width computation.

* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::LineBuilder):
(WebCore::Layout::LineBuilder::initialConstraintsForLine const):
* layout/formattingContexts/inline/InlineLineBuilder.h: Add an "intrinsic mode" which will also be used
for other, preferred width computation specific properties and values.



Canonical link: https://commits.webkit.org/244286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285860 268f45cc-cd09-0410-ab3c-d52691b4dbfc